Complete CRUD functions for Seller Item
Create Seller Item service
Rename the business entity from vendor to seller
Add functions to enable sellers or admins to create, update, or delete an item
