# src/controllers/request/seller-item.request.ts
@@ -1,6 +1,75 @@
-import { IsBoolean, IsOptional, IsString } from "class-validator";
+import {
+  IsBoolean,
+  IsNumber,
+  IsOptional,
+  IsString,
+  IsUrl,
+} from "class-validator";
 
-export class SellerItemRequest {
+export class SellerItemCreationRequest {
+  @IsString()
+  name: string;
+
+  @IsString()
+  description: string;
+
+  @IsNumber()
+  price: number;
+
+  @IsString()
+  categoryId: string;
+
+  @IsString()
+  sellerId: string;
+
+  @IsOptional()
+  @IsBoolean()
+  isAvailable?: boolean;
+
+  @IsOptional()
+  @IsNumber()
+  quantity?: number;
+
+  @IsOptional()
+  @IsUrl({}, { message: "Invalid image URL" })
+  imageUrl?: string;
+}
+
+export class SellerItemUpdateRequest {
+  @IsOptional()
+  @IsString()
+  name?: string;
+
+  @IsOptional()
+  @IsString()
+  description?: string;
+
+  @IsOptional()
+  @IsNumber()
+  price?: number;
+
+  @IsOptional()
+  @IsString()
+  categoryId?: string;
+
+  @IsOptional()
+  @IsString()
+  sellerId?: string;
+
+  @IsOptional()
+  @IsBoolean()
+  isAvailable?: boolean;
+
+  @IsOptional()
+  @IsNumber()
+  quantity?: number;
+
+  @IsOptional()
+  @IsUrl({}, { message: "Invalid image URL" })
+  imageUrl?: string;
+}
+
+export class SellerItemQuery {
   @IsOptional()
   @IsString()
   sellerId?: string;
